@@ -45,6 +45,16 @@
 -->
 
       <listitem>
+        <para>August 23rd, 2015</para>
+        <itemizedlist>
+          <listitem>
+            <para>[fernando] - Update to mesa-10.6.5. Fixes
+            <ulink url="&blfs-ticket-root;6851">#6851</ulink>.</para>
+          </listitem>
+        </itemizedlist>
+      </listitem>
+
+      <listitem>
         <para>August 22nd, 2015</para>
         <itemizedlist>
           <listitem>
