@@ -442,7 +442,7 @@
 <!ENTITY xbitmaps-version             "1.1.1">
 <!ENTITY xcursor-themes-version       "1.0.4">
 <!ENTITY xkeyboard-config-version     "2.15">
-<!ENTITY mesalib-version              "10.6.4">
+<!ENTITY mesalib-version              "10.6.5">
 <!ENTITY xcb-util-version             "0.4.0">
 <!ENTITY xcb-util-image-version       "0.4.0">
 <!ENTITY xcb-util-keysyms-version     "0.4.0">
