@@ -6,10 +6,10 @@
 
   <!ENTITY mesalib-download-http " ">
   <!ENTITY mesalib-download-ftp  "ftp://ftp.freedesktop.org/pub/mesa/&mesalib-version;/mesa-&mesalib-version;.tar.xz">
-  <!ENTITY mesalib-md5sum        "45092471f7abef40a7deab281d7954ba">
+  <!ENTITY mesalib-md5sum        "805092cc9b9784680c1db7aa6415517e">
   <!ENTITY mesalib-size          "6.8 MB">
-  <!ENTITY mesalib-buildsize     "290 MB (with tests)">
-  <!ENTITY mesalib-time          "8.4 SBU (with tests)">
+  <!ENTITY mesalib-buildsize     "234 MB (without tests)">
+  <!ENTITY mesalib-time          "8.0 SBU (without tests)">
 ]>
 
 <sect1 id="mesalib" xreflabel="MesaLib-&mesalib-version;">
